--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis obcaecati temporibus magni facilis sapiente iure ratione dolore id voluptatibus, quaerat fuga et veniam. Delectus at obcaecati dolore, iste aspernatur voluptates.
+    </p>
 </body>
 </html>
