--- a/index.html
+++ b/index.html
@@ -94,5 +94,18 @@
         <img src="assets/images/Image 12.png" 
         alt="...">
     </main>
+
+    <footer class="container"> 
+        <span>
+            Travelgram &copy; 2024
+        </span>
+
+        <span>
+            Termos de uso
+        </span>
+        <span>
+            Politica de privacidade
+        </span>
+    </footer>
 </body>
 </html>
